[package]
name = "qraft"
version = "0.1.0"
edition = "2021"

[dependencies]
async_once = "0.2"
anyhow = "1.0"
log = "0.4"
cfg-if = "1"
dotenv = "0.15"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
lazy_static = "1.4"
chrono = "0.4"
tokio = {version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1.1", features = ["serde", "v4", "v5"] }
mysql = {version = "22", optional = true}
postgres = {version = "0.19", optional = true}
# postgres-shared = {version = "0.4", optional = true}
actix-web = "4"
rand = "0.8"
r2d2 = "0.8"
redis = { version = "0.21.6", features = [ "tokio-comp", "cluster", "r2d2"] }
kafka = "0.9"
#rdkafka = { version = "0.28", features = ["cmake-build"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [ "runtime-actix-native-tls", "macros", "any", "postgres", "mysql", "mssql", "sqlite",  "uuid", "chrono", "bigdecimal", "json", "ipnetwork", "tls"]
